@@ -1,23 +1,25 @@
 package com.tunetown.service;
 
-import com.google.cloud.storage.*;
+import com.google.cloud.storage.BlobId;
+import com.google.cloud.storage.BlobInfo;
+import com.google.cloud.storage.Storage;
 import com.google.common.collect.ImmutableMap;
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseAuthException;
 import com.google.firebase.cloud.StorageClient;
 import com.tunetown.config.FirebaseConfig;
-import com.tunetown.repository.SongRepository;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.tika.Tika;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLEncoder;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.UUID;
 
 @Service
 @Slf4j
@@ -41,9 +43,7 @@ public class FirebaseStorageService {
                     .getBytes());
 
             return appCheckToken;
-        } catch (FirebaseAuthException e) {
-            throw new RuntimeException(e);
-        } catch (IOException e) {
+        } catch (FirebaseAuthException | IOException e) {
             throw new RuntimeException(e);
         }
     }
@@ -56,7 +56,6 @@ public class FirebaseStorageService {
      * @param imageFile: Get from computer
      * @param fileName: Get the name of file from filePath
      * @return downloadUrl used to add to songPoster field
-     * @throws IOException
      */
     public String uploadImage(MultipartFile imageFile, String fileName) throws IOException {
         InputStream fileContentImage = imageFile.getInputStream();
@@ -74,7 +73,7 @@ public class FirebaseStorageService {
                     Storage.BlobWriteOption.predefinedAcl(Storage.PredefinedAcl.PUBLIC_READ));
 
             String token = UUID.randomUUID().toString();
-            String encodedToken = URLEncoder.encode(token, "UTF-8");
+            String encodedToken = URLEncoder.encode(token, StandardCharsets.UTF_8);
 
             // Construct the download URL manually
             downloadUrlImage = "https://firebasestorage.googleapis.com/v0/b/" +
@@ -102,39 +101,33 @@ public class FirebaseStorageService {
      * @param mp3File: Get from computer
      * @param fileName: Get the name of file from filePath
      * @return downloadUrl used to add to songData field
-     * @throws IOException
      */
-    public String uploadMp3(MultipartFile mp3File, String fileName, int numberOfParts) throws IOException {
+    public String uploadMp3(MultipartFile mp3File, String fileName) throws IOException {
         // Read file MP3 from filePath
         InputStream fileContent2 = mp3File.getInputStream();
 
         // Size of each part
         long fileLength = fileContent2.available(); // Get the total length of the file
-        int chunkSize = (int) Math.ceil((double) fileLength / numberOfParts);
+        int chunkSize = (int) Math.ceil(fileLength);
 
-        int bytesRead;
-        int partNumber = 1;
-
-        // Firebase storage config
         try {
             Storage storage = StorageClient.getInstance(firebaseConfig.firebaseApp()).bucket("tunetown-6b63a.appspot.com").getStorage();
-
             byte[] chunk = new byte[chunkSize];
+
             // Read and upload each part
-            while ((bytesRead = fileContent2.read(chunk)) > 0) {
+            if (fileContent2.read(chunk) > 0) {
                 int subString = fileName.length() - 4;
                 // Upload each part on firebase
-                BlobInfo partInfo = BlobInfo.newBuilder(BlobId.of("tunetown-6b63a.appspot.com", "audios/" + fileName.substring(0, subString) + "/" + fileName.substring(0, subString) + "_" + partNumber + ".mp3"))
+                BlobInfo partInfo = BlobInfo.newBuilder(BlobId.of("tunetown-6b63a.appspot.com", "audios/" + fileName.substring(0, subString) + "/" + fileName.substring(0, subString) + ".mp3"))
                         .setContentType("audio/mpeg")
                         .build();
 
                 storage.create(partInfo, chunk);
 
                 // Get the URL of each part
-                partDownloadUrl = "https://storage.googleapis.com/tunetown-6b63a.appspot.com/audios/" + fileName.substring(0, subString) + "/" + fileName.substring(0, subString) + "_" + partNumber + ".mp3";
-                partNumber++;
+                partDownloadUrl = "https://storage.googleapis.com/tunetown-6b63a.appspot.com/audios/" + fileName.substring(0, subString) + "/" + fileName.substring(0, subString) + ".mp3";
             }
-            songData = partDownloadUrl.substring(0, partDownloadUrl.length() - 6);
+            songData = partDownloadUrl;
             return songData;
         }
         catch (Exception e) {
